opam-version: "2.0"
version: "0.1.0"
synopsis: "Example for prometheus_push"
maintainer: "laurent@marigold.dev"
authors: "Name laurent@marigold.dev"
homepage: "https://github.com/Laucans/prometheus-push"
bug-reports: "https://github.com/Laucans/prometheus-push/issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "2.7"}
  "prometheus_push" {>= "0.1.0"}
  "prometheus" {>= "1.2"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
